
_____________________________________________________________________________________________________


CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2019 MAY 16c
  * in cycle/resconv/doc/report.tex
    - fixed mistake in WENO3 outline related to the optimal weights


2019 MAY 16b
  * in cycle/share/res_share.c
    - in _f_WENO3(), fixed an error related to the optimal weights: should be 1/4 and 3/4,
      not 1/3 and 2/3


2019 MAY 16a
  * in bin
    - updated Sedov.wrp and Noh2D.wrp


2019 MAY 15a
  * in src/control.c
    - in write_license(), changed how the copyrights are written
  * in lib/gridg/3Dbase.c and lib/gridg/2Dbase.c
    - added a Copyright to Derrick C. Alexander


2019 MAY 14c
  * in tools/gitnewversion_public.sh
    - replaced warp_public by CFDWARP_public


2019 MAY 14b
  * in bin
    - Updated Noh2D.wrp
  * in cycle/resconv/_MUSCL/resconv.c
    - added TVD2_MINMOD2 interpolation


2019 MAY 14a
  * renamed
    - maxlinewidth -> MAX_LINE_WIDTH
  * in config/config.c
    - added definition of MAX_LINE_WIDTH
    - in handle_options(), made word wrapping function of MAX_LINE_WIDTH
    - in output_makefileheader(), added -DPROPRIETARY flag if code compiled with proprietary modules
  * in src/control.c
    - in write_license(), added all contributors to the Copyright 
    - in write_license(), added 3rd condition if PROPRIETARY flag is set 
  * in src/main.c
    - renamed maxstrlen to MAX_STRING_LENGTH 
    - renamed lengthcol1 to LENGTH_COL1 
    - renamed lengthcol2 to LENGTH_COL2 
    - defined MIN_LINE_WIDTH
    - in write_options(), renamed minlinewidth to MIN_LINE_WIDTH


2019 MAY 09b
  * in bin
    - updated stationary_contact_discontinuity.wrp


2019 MAY 09a
  * in tools/*.sh
    - made the license easier to read by word wrapping on the 90th column
  * in various *.c files
    - renamed "(c) Copyright" to "Copyright"
 

2019 MAY 08a
  * in src/bdry.c