@@ -1,0 +1,52 @@
+/*
+Copyright 2019 Bernard Parent
+All rights reserved.
+
+
+TERMS AND CONDITIONS FOR USE, REPRODUCTION, AND DISTRIBUTION
+
+1. Definitions. "Discloser" shall mean the Copyright holder Bernard Parent. 
+   "Recipient" shall mean an individual or Legal Entity exercising permissions granted 
+   by this License. "Information" shall mean the software and algorithms in this file. 
+   "Purpose" shall mean the tasks assigned to the Recipient by Discloser.
+
+2. The Copyright notices and the Terms and Conditions must not be modified or removed 
+   from this source file.   
+
+3. All right, title and interest in and to the Information shall remain the exclusive 
+   property of the Discloser and the Information shall be held in trust and confidence 
+   by Recipient for Discloser. No interest, licence or any right respecting the 
+   Information, other than expressly set out herein, is granted to Recipient by 
+   implication or otherwise.
+
+4. Recipient shall use all reasonable efforts to protect Discloser’s interest in the 
+   Information and keep it confidential, using a standard of care no less than the 
+   degree of care that Recipient would be reasonably expected to employ for his own 
+   similar confidential information. In particular Recipient shall not directly or 
+   indirectly disclose, allow access to, transmit or transfer the Information to a third 
+   party without the Discloser’s prior written consent. 
+
+5. The Information shall not be copied, reproduced in any form or stored in a retrieval 
+   system or data base by Recipient without the prior written consent of Discloser, 
+   except for such copies and storage as may reasonably required internally by Recipient 
+   for the Purpose.
+
+6. Disclaimer. This software is provided by the copyright holders and contributors 
+   "AS IS" and any express or implied warranties, including, but not limited to, the 
+   implied warranties of merchantability and fitness for a particular purpose are 
+   disclaimed. In no event shall the copyright holder or contributors be liable for any
+   direct, indirect, incidental, special, exemplary, or consequential damages (including
+   but not limited to, procurement of substitute goods or services; loss of use, data, 
+   or profits; or business interruption) however caused and on any theory of liability, 
+   whether in contract, strict liability, or tort (including negligence or otherwise)
+   arising in any way out of the use of this software, even if advised of the 
+   possibility of such damage. 
+
+*/
+
+#include <model/share/chem_share.h>
+#include <model/emfield/_emfield.h>
+#include <model/_model.h>
+#include <model/thermo/_thermo.h>
+
+
