@@ -1,0 +1,8 @@
+#ifndef _EMFIELD_SHARE_H
+#define _EMFIELD_SHARE_H
+
+#include <model/_model.h>
+#include <src/common.h>
+
+
+#endif /* _EMFIELD_SHARE_H */
